upgrade: supervisors of the works is working now
